data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1628.wast
;; 9. **Test 9**: - **Description**: Mixed `block`, `if`, and `loop` structure where `br_if` within a loop targets the outermost block encompassing the entire structure. - **Constraint Checked**: Verifies `br_if` escapes the entire nested structure correctly to the outermost block.

(assert_invalid
  (module (func $test-mixed-structures
    (block $outer
      (loop $loop
        (if (i32.const 1)
          (then (br_if 0 (i32.const 1)))
        )
      )
    )
  ))
  "type mismatch"
)